--- a/Tweante.mw
+++ b/Tweante.mw
@@ -171,11 +171,11 @@ t Bekeandste dreenkn oet Tweante mut ongetwiefeld [[Grolsch]] beer wean. Skoonwa
 
 === Muziek ===
 [[File:Ilse DeLange parkpop 25juni2006.jpg|thumb|270x270px]]
-Op et vlak van de volksmuziek is Tweante van ooldsher ne ofspegeling van völle boernestrekn en oonderdeel van et gröttere Sassiese verbaand. Um tradisies te bewoarn zeent dr n antal kloompndaans-vereniges, dee't oolde [[Nedersaksische volksleidjes|Nedersaksiese verskes]] spölt as de [[Driekusman|''Driekusman'']]'' ''en ''Ik goa met mien meakn noar Hoksebarge too''. Vanweage de nauwe sosjale saamnhaank in grote deeln van Tweante, is muziekmaakn n belangriek oonderdeel van völle gemeenskopn. De lokale harmoniejn en fanfares köant op n beheurlik leednantal rekn. In Eanske zit et ArtEZ-konservatorium, woer't studeantn klassieke en lechte muziek studeern köant. Wieters zeent dr völle kleaine rockbandjes en groepkes vreandn dee't vuur de wille muziekmaakn doot.
+Wat volksmuziek angeet is Tweante van oldsher net as umliggende strekken ne ofspegeling van et gröttere Saksische verbaand. Um tradities te bewoaren zint der een antal klompendans-vereniges, dee as olde [[Nedersaksische volksleidjes|Nedersaksiese verskes]] spölt zo as de [[Driekusman|''Driekusman'']]'' ''en ''Ik goa met mien meakn noar Hoksebarge too''. Vanweage de nauwe sociale samenhank op 'n boer in Tweante is muziekmaken een belangriek onderdeel van völle gemeenskoppen. De lokale harmoniejen en fanfares köant op een beheurlik ledenantal rekkenen. In Eanske zit et ArtEZ-konservatorium, woer as studenten klassieke en lechte muziek studeren köant. Wieters zint der völle kleine rockbandjes en groepkes kameröade dee't vuur de wille muziekmaken doot.
 
-Op et vlak van popmuziek is Tweante ginnen onbekeandn. Zangeresse [[Marga Bult]] oet [[Lattrop]] haaln met öare groep [[Babe (muziekgroep)|Babe]] vanof [[1981]] meardere hits en deed as Marcha in [[1987]] met an et [[Eurovisiesongfestival]], woer't he viefdes wör en de publiekspries kreeg. Oondertusken is ook [[Ilse DeLange]]  oet [[Almelo]] laandelik duur ebrökn met grote nummer 1-hits as ''The Great Escape'' en ''Incredible''. Popzangeresse [[Sanne Hans]] oet [[Eanske]] kreeg in [[2012]] oonder artiestnnaam Miss Montreal de [[Schaal van Rigter]] oetreikt, umdet öar nommer ''Wish I Could'' in 2011 et vaakst edreeid was vuur nasjonale radiostasjon [[3FM]].
+Op et vlak van popmuziek is Tweante ginnen onbekenden. In de joaren '50 van de 20e eeuwe raken zangeresse [[Olga Lowina]] in heel Nederland bekend as de Jodelkeuniginne oet Bokel. En de groep Teach-In oet Eanske wust in [[1975]] et [[Eurovisie Songfestival]] te winnen met öaren inzending ''Ding-a-Dong''. Zangeresse [[Marga Bult]] oet [[Lattrop]] skoren met öare groep [[Babe (muziekgroep)|Babe]] vanof [[1981]] meardere hits en deed as Marcha in [[1987]] met an et Eurovisie Songfestival, woeras he viefdes wör en de publiekspries kreeg. Ondertusken is ook [[Ilse DeLange]] oet [[Almelo]] landelik duurebrökken met grote nummer 1-hits as ''The Great Escape'' en ''Incredible''. Popzangeresse [[Sanne Hans]] oet [[Eanske]] kreeg in [[2012]] onder artiestennaam ''Miss Montreal'' de [[Schaal van Rigter]] oetreikt, umdet öar nommer ''Wish I Could'' in 2011 et vaakst edreeid was vuur nationaal radiostation [[3FM]].
 
-Wieters is [[Thomas Berge]] oet [[Hoksebarge|Hoksebargen]] hard op weg um laandelik mear erkennige te kriegn. Berge breuk met 12 joar duur met zin Hollaandse versken ''Mijn Luchtballon''. Hee kreeg völle anhangers van et Hollaandse leawnsleed, mer hee wol toch mear de pop- en rockkaante oet. In 2013 köm he doarumme met zin album ''Berge Verzet''.  
+[[Thomas Berge]] oet [[Hoksebarge|Hoksebargen]] is landelik ook ginnen vrömden. Berge breuk met 12 joar duur met zin Hollandse versken ''Mijn Luchtballon''. Hee kreeg völle anhangers van et Hollaandse leavensleed, mer wol toch mear de pop- en rockkante oet. In 2013 köm he doarumme met zin album ''Berge Verzet''.  
 == Media ==
 In Tweante kö'j verskeaidene [[Kraante|kraantn]] leazn. n Bekeandsten is de [[De Twentsche Courant Tubantia|Tweantse Courant Tubantia]], dee oonderdeel is van oetgewerieje Wegener Group. In sommige deeln van Tweante is van deezelfde oetgewerieje [[de Stentor]] te kriegn. Wieters is dr nog et wekblad [[De Roskam]]. Doarnöast zeent dr nog ontelboare lokale kreantjes, dee't zik vuural richtet op lokaal niejs. 
 
