--- a/Tweante.mw
+++ b/Tweante.mw
@@ -146,7 +146,7 @@ Umdat n groot deel van Twente Katholiek is, wördt ok hier [[carnaval|karnaval]]
 Vuural de wat kleindere steeden en döarpe onderholdt nog de [[noaberskop|noaberplicht]], woerbie't alle noabers mekoar biestoat as et neudig is. Det kan wen met et verzörgen van n hof, zorgen vuur de beeste, sorteern van de post en planten water doon as ene van de families met vakansie is. As der ne trouwerieje te viern is (of zovöljoarige brulfte) goat de noabers met mekaar hen ''greun haaln'', en bouwt ze vuur n ingank van et trouwnde of jubileernde stel ne [[boage]] van dannentäkke. De vrouwleu volt dan reuskes van papier, dee't in de boage komt te hangn.
 
 ===Sproake===
-Oonderzeuk oet 2005 hef oet ewezen at 62% van de Tukkers et [[Tweants|Twents]] nog elken dag gebrok, en mear as 40% van de ondervroagden least zowat elke wekke wal Twents. Zelfs 69% gef an at ze in thoes eawenvölle Twents en Neerlands sprekt.<ref>Bloemhoff, H. et al. ''Taaltelling Nedersaksisch: Een enquête naar het gebruik en de beheersing van het Nedersaksisch in Nederland''. Groningen: Sasland (2005). 39-40.</ref> Et Twents is n dialekt van van de [[Westfaals]]e tak van et [[Neersassies]], wat in [[Neerlaand|Neerland]] seend [[1996]] offisjeel duur de [[EU]] as streksproake is erkend in et [[Europees Haandves veur regionale taolen of taolen van minderheen|Europese handvest vuur regionale sproakn]]. Et Twents is roewweg in te deeln in [[Oost-Tweants|Oost-Twents]] en [[Tweants-Groafskops|Twents-Groafskops]]. Den lesten wörd ook in et noorden van n [[Achterhook]] esprökn. Et is doarumme nit helemoal dudelik woer as et Twents ophold en Achterhooks begeent. Et [[Vjens]] is n geval apart, doar veend iej nen tuskenvörm van et olde Westfaals en et hudige Twents, vuural duur de [[Brekking (taal)|klankbrökke]] in wöarde as ''wjen'' (wen) en ''edwoan'' (edoan). In [[Eanter]] en [[Riesn|Riessen]] hef et dialekt nog wier andere klankken en weurde. Noa n [[Tweede Wereldoorlog|Tweeden Wearldoorlog]] wör et op de skoln of eroaden Twents met de keender te kuiern, umdet dit slecht zol wen vuur öare sproakontwikkeling. Dit zorgen der vuur det Twents vandaag n dag völle meender kuierd wörd as vuur dee tied. Nieje onderzeuken hebt anteund det et kuiern van n meardere sproakn/dialektten juust good is, skoonwal et nog aait lastig is de olders hiervan te oawertuugn. Et verbetterde zelfbeeld van Twente en et sukses van de [[voetbal]]klub [[FC Tweante|FC Twente]] hef de greutsigheid van de Tukkers an ewakkerd, en zorget aal mear vuur ne opleawing van et Twents.
+Oonderzeuk oet 2005 hef oet ewezen at 62% van de Tukkers et [[Tweants|Twents]] nog elken dag gebrok, en mear as 40% van de ondervroagden least zowat elke wekke wal Twents. Zelfs 69% gef an at ze in thoes eawenvölle Twents en Neerlands sprekt.<ref>Bloemhoff, H. et al. ''Taaltelling Nedersaksisch: Een enquête naar het gebruik en de beheersing van het Nedersaksisch in Nederland''. Groningen: Sasland (2005). 39-40.</ref> Et Twents is n dialekt van van de [[Westfaals]]e tak van et [[Neersassies]], wat in [[Neerlaand|Neerland]] seend [[1996]] offisjeel duur de [[EU]] as streksproake is erkend in et [[Europees Haandves veur regionale taolen of taolen van minderheen|Europese handvest vuur regionale sproaken]]. Et Twents is roewweg in te deeln in [[Oost-Tweants|Oost-Twents]] en [[Tweants-Groafskops|Twents-Groafskops]]. Den lesten wörd ook in et noorden van n [[Achterhook]] esprökken. Et is doarumme nit helemoal dudelik woer as et Twents ophold en Achterhooks begeent. Et [[Vjens]] is n geval apart, doar veend iej nen tuskenvörm van et olde Westfaals en et hudige Twents, vuural duur de [[Brekking (taal)|klankbrökke]] in wöarde as ''wjen'' (wen) en ''edwoan'' (edoan). In [[Eanter]] en [[Riesn|Riessen]] hef et dialekt nog wier andere klankken en weurde. Noa n [[Tweede Wereldoorlog|Tweeden Wearldoorlog]] wör et op de skolen of eroaden Twents met de kinder te kuiern, umdet dit slecht zol wean vuur öare sproakontwikkeling. Dit zorgen der vuur det Twents vandage 'n dag völle minder kuierd wörd as vuur dee tied. Nieje onderzeuken hebt anteund det et kuiern van meardere sproaken/dialekten juust good is, skoonwal et nog aait lastig is de olders hiervan te oavertugen. Et verbetterde zelfbeeld van Twente, de veranderende kiek op mediagebroek duur de komst van et internet en et sukses van de [[voetbal]]klub [[FC Tweante|FC Twente]] hef de greutsigheid van de Tukkers an ewakkerd, en zorget aal mear vuur ne opleawing van et Twents.
 
 Nen oaverzicht van de karakteristieken van et Twents kö-j veenden op et [[Tweants weurdnbook|Twents weurdnbook]].
 
