--- a/Tweante.mw
+++ b/Tweante.mw
@@ -44,11 +44,11 @@ Twente hef tegen de 620.000 inwonners en besteet oet veerteen gemeentes; [[Twean
 
 ==Naam==
 [[Ofbeelding:Mars Thingsus, Beda and Fimmilena altar, Housesteads.jpg|thumb|left|80px|Altoarsteen van Vercovicium]]
-Twente is in olde beuke al wier te vinden as ''Tuianti ''([[798]]), ''Tuenti'' (799), ''Thuehenti'' (851), ''Tuente'' ([[11e eeuw|11den eeuw]]) en oeteindelik as ''Twenthe'' of ''Twente''. Vroger wör de -w- as ne -u- (of -v-) eskrewen. Den naam van 798 lik dus nog aait völle op et Twente van non. Toch dok den naam van Twente al völle earder op. Op twee altoarstinder dee't vunden wörden bie de olde Romeinse leagerplaatse [[Vercovicium]] bie de [[Mure van Hadrianus]] in [[Engelaand (regio)|Engeland]] (rechtevoort de stad [[Housesteads]]), steet det de ''cives Tvihanti'' ([[Latiens]] vuur ''inwonners van Tvihanti'') onderdeel warren van ne Freeske ruutersofdelige. De Romeinen huurden wal vakerder "barbaarse" leageronderdeeln in (dee neumden ze ''cunei'').
+Twente is al wier te vinden as ''Tuianti ''([[798]]), ''Tuenti'' (799), ''Thuehenti'' (851), ''Tuente'' ([[11e eeuw|11den eeuw]]) en oeteindelik as ''Twenthe'' of ''Twente''. Vroger wör de -w- as ne -u- (of -v-) eskrewen. Den naam van 798 lik nog aait völle op et Twente van non. Toch dok den naam van Twente al völle earder op. Op twee altoarsteender dee't vunden wörden bie de olde Romeinse leagerplaatse [[Vercovicium]] bie de [[Mure van Hadrianus]] in [[Engelaand (regio)|Engeland]] (rechtevoort de stad [[Housesteads]]), steet det de ''cives Tvihanti'' ([[Latiens]] vuur ''inwonners van Tvihanti'') onderdeel warren van ne Freeske ruutersofdelige. De Romeinen huurden wal vakerder "barbaarse" leageronderdeeln in (dee neumden ze ''cunei'').
 
 Aandere verkloarings goat det Twente bekend stund um öare ruuters of et gebroek van pearde. In peardenjargon is nen ''twenter'' den naam vuur een tweejoarig peard. Een steark peard was onmisboar in de landbouw, vuur et woark op et land, vuur versleppen van allerhande zaken en vuur et [[vervoor]].
 
-Wier een ander idee is det Twente op dezelfde manere an den naam keump as [[Dreante|Drente]] (ze liekt ja oardig op mekoar). et Woard "Twente" zol wen ofleidt van et telwoard "twee" en Drente zol van "dree" kommen. De [[gouw|gouwen]] Twente en Drente leaden vroger tegen mekoar an. Vanoet Utrecht zeen (woar dat Twente en Drente in de middeleeuwen allebeide bie heurden) ko'j zeggen dat Twente et tweede gebeed van et [[Sticht]] was en Drente et daarde.
+Wier een ander idee is det Twente op dezelfde manere an den naam keump as [[Dreante|Drente]] (ze liekt ja oardig op mekoar). Et woord "Twente" zol wen ofleidt van et telwoard "twee" en Drente zol van "dree" kommen. De [[gouw|gouwen]] Twente en Drente leaden vroger tegen mekoar an. Vanoet Utrecht zeen (woar dat Twente en Drente in de middeleeuwen allebeide bie heurden) ko'j zeggen dat Twente et tweede gebeed van et [[Sticht]] was en Drente et daarde.
 
 ==Landskop==
 [[Ofbeelding:De Regge bij Rectum, Twente (NL) 100 0036.JPG|thumb|right|Regge]]
@@ -69,7 +69,7 @@ Zo tusken 2100 vuur en 700 noa Kristus leawden de leu aal mear samen. Zo konden 
 ===Tvihanti===
 Den [[Romeinse Riek|Romeinsen]] geskiedkundigen [[Publius Cornelius Tacitus]] beskreef in zien woark ''Germanica'' de verskillende [[Germanen]]volker dee as in Noord-West Europa leawden. Ook de zogenaamde ''Tvihanti'' of ''Tuihanti'' beskrif he. Dee zollen samen met verskeidene andere stämme den Romeinsen keizer [[Germanicus]]  anvöllen hebben in et joar 14 noa Kristus. Zowat 300 joar later gungen de Tvihanti wier tegen de Romeinen an et vechten. Ditmoal was Konstantijn keizer. Den slachten öar of.
 
-Aanderzieds gung nen groep Tvihanti met op nen Romeinsen veeldtocht noar [[Vercovicium]] in Noord-[[Engelaand (regio)|Engeland]], as ruuters in een [[Freeslaand|Freesk]] leageronderdeel. Zee wordt eneumd op twee altoarsteender dee as bie de [[Mure van Hadrianus]] evunden zint en dee as ewiedet zint an den Romeinsen god [[Mars (god)|Mars]] en den Germansen God [[Thincso]].
+Aanderzieds gung nen groep Tvihanti met op nen Romeinsen veeldtocht noar [[Vercovicium]] in Noord-[[Engelaand (regio)|Engeland]], as ruuters in een [[Freeslaand|Freesk]] leageronderdeel. Zee wordt eneumd op twee altoarsteender dee as bie de [[Mure van Hadrianus]] evunden zint. Dee warren ewieded an den Romeinsen god [[Mars (god)|Mars]] en den Germaansen God [[Thincso]].
 
 === Sassen ===
 Vanof et viefde joarhonderd kömmen de [[Saksen (vôlk)|Sassen]] vanoet et hudige Noord-Duutsland verdan wiedter noar et zuudwesten in et hudige Nederland. Zo kregen ze aal mear invlood in Twente. Wellicht hef der ne gesteurde inmenging west. Vanof dee tied har Twente in ieder geval mear kenmoarken gemeen met de noordoostelikere Sassengebeden. De tradisies en wieze van samenleawen wörden van umliggende volker oawer enömmen. De sproake dee vanof dee tied ekuierd wörd en dee as leu begunnen op te skriewen, wörd rechtevoort [[Ooldsassies]] eneumd. Disse sproake wör met enömmen bie invasies van [[Engelaand (regio)|Engeland]], in samenwoarking met de [[Angelen]] en de [[Juten]]. Doar mengden et zik met de dialekten van dee andere beide volker, woerduur as et non bekend steet as [[Angelsassies]], of [[Ooldengels]]. Of hier ook leu oet Twente an metdoan hebt, is neet met zekerheid te zeggen. De oawerinkomsten in de sproake zint in ieder geval nog good te zeen. Ook wörden huuze in Twente volgens den [[Sassiese bouwstiel|Sassiesen bouwstiel]] emaakt (et [[Lös hoes]]). Rechtevoort wordt hier mangs nog ellementen van in huuze stopt.
@@ -78,7 +78,7 @@ Vanof et viefde joarhonderd kömmen de [[Saksen (vôlk)|Sassen]] vanoet et hudig
 
 [[Ofbeelding:Oldenzaalplechelmus1.jpg|thumb|left|250px|[[Oldenzaal]], [[Sint-Plechelmusbasiliek]]. Tiedens de Middeleewen was dit healigdom um de relieken van [[Plechelmus]] n beevoartsplek]]
 
-An et ende van et achtste joarhonderd, noa ne lange riegel [[Saksenoorloogn|Sassenoorlogen]], köm Twente onder et [[Frankiese Riek]] van [[Koarel n Grootn|Koarel den Groten]]. Hee kreeg der et strabante Sassenvolk onder duur leagerplekken te stichten, zo as bie [[Oldnzel|Oldenzel]]. Det keump van et Frankiese woard ''Olde Sala'', wat ''olde zale ''betekent. Deftige leu harren vroger ne grote zale um rechtdag, vergoaringe en feeste te holden. Twente hung nog aait de olde Germanse goden an. Mear onder et Frankiese bewind voorden Koarel den Groten met geweeld et [[Kristendom]] in. Et was óf bekearn óf vermoord worden. Det gung nog neet zonder slag of stoot, want bievuurbeeld in [[Deaventer]] wörden vanoet Twente vake de kaarken platbrandt, zo as den van den [[Angelsassen|Angelsassies]]en monnik [[lebuïnus|Leefwin]]. Pas doo as Sassiese leiders zo as [[Widukind|Wittekind]] zik deupen leuten, volgden öare anhangers. De olde [[germanen|germanse]] heiligdommen wörden ummebouwd töt kaarken en kapellen. Den Sassiesen oadel gung zik duur et nieje Frankiese leenrecht gedreagen as [[Feodalisme|feodale]] klasse.
+An et ende van et achtste joarhonderd, noa ne lange riegel [[Saksenoorloogn|Sassenoorlogen]], köm Twente onder et [[Frankiese Riek]] van [[Koarel n Grootn|Koarel den Groten]]. Hee kreeg der et strabante Sassenvolk onder duur leagerplekken te stichten, zo as bie [[Oldnzel|Oldenzel]]. Det keump van et Frankiese woard ''Olde Sala'', wat ''olde zale ''betekent. Deftige leu harren vroger ne grote zale um rechtdag, vergoaringe en feeste te holden. Twente hung nog aait de olde Germanse goden an. Mear onder et Frankiese bewind voorden Koarel den Groten met geweeld et [[Kristendom]] in. Et was óf bekearn óf vermoord worden. Det gung nog neet zonder slag of stoot, want bievuurbeeld in [[Deaventer]] wörden vanoet Twente vake de kaarken platbrandt, zo as den van den [[Angelsassen|Angelsassies]]en monnik [[lebuïnus|Leefwin]]. Pas doo as Sassiese leiders zo as [[Widukind|Wittekind]] zik deupen leuten, volgden öare anhangers. De olde [[germanen|germaanse]] heiligdommen wörden ummebouwd töt kaarken en kapellen. Den Sassiesen oadel gung zik duur et nieje Frankiese leenrecht gedreagen as [[Feodalisme|feodale]] klasse.
  
 Zo ongevear in et 10de joarhonderd köm Twente onder besteur van et [[Sticht Utrecht]] en wör et deel van et [[Oaversticht]]. Gedoerende de middeleeuwen besteurden eerst nen groaf -  nen hogen hear onder den bisskop - de strekke vanoet zinnen borg in [[Goor]]. Later köm et besteur in hande van nen [[laanddrost|landdrost]], den as duur nen bisskop ekeuzen wör. In et 11de of 12e joarhonderd wör Noord-Twente (um [[Emmelkaamp]]) van Twente ofskeiden en gung bie de [[Graofschop Benthem|Groafskop Bentem]] heuren Et bleef nog wal onder Utrechts besteur.
 
