--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -106,7 +106,10 @@ Den [[Grouten Hundenkop]] (Pico Cão Grande) is nen kenmarkenden vulkaanbarg, de
 === Klimaat ===
 Et klimaat van São Tomé en Príncipe wördt eförmed döär syne geografiske steade. Et hangt af van laegedrukgebeden rund den eavenaar, [[Monsoon|monsoonwinden]] uut et süden, den wårmen [[guineesken gulvströym]] en de bargen.
 
-Up seyhöygde is et klimaat tropisk: heyte en vuchtig med döärsneyde jårlikse temperaturen rund de 26&nbsp;°C en dår verandert daags neet vöäle an. Et wördt der neet vake heyter as 32&nbsp;°C. Meyr in et binnenland en höygere steades is den döärsneyde temperatuur jårliks 20&nbsp;°C. Des nachtes köölt et af. Jårliksen reagenval skummelt van 7000&nbsp;mm in de bargwolden in et binnenland töt 800&nbsp;mm in de noorderlike laeglanden. Et reagenseisoon duurt van oktober töt mei.
+Up seyhöygde is et klimaat tropisk: heyte en vuchtig med döärsneyde jårlikse temperaturen rund de 26 °C en dår verandert daags neet vöäle an. Et wördt der neet vake heyter as 32 °C. Meyr in et binnenland en höygere steades is den döärsneyde temperatuur jårliks 20 °C. Des nachtes köölt et af. Jårliksen reagenval skummelt van 7000 mm in de bargwolden in et binnenland töt 800&nbsp;mm in de noorderlike laeglanden. Et reagenseisoon duurt van oktober töt mei.
+
+=== '''Soorten planten en deers''' ===
+Et land is deyl de ekoregio Nat laeglandwold van São Tomé, Príncipe en Annobón. In 2019 stünd et 68. up ne bebuskingslyste med 172 andere landen. De eilände hebbet weinig inheymske sougdeers (behalve den sãotomeesken spitsmuus en verskeidene inheymske vleadermüse). Wal leavet der flink wat inheymske vöägel en planten up de eilanden, sou as de sãotoméeske ibis, den kleinsten ård ibis van de wearld, de grötste honningsuger van de wearld, den seldsamen sãotoméesken klauwerd en verskeidene groute soorten ''Begonia''. Ouk is São Tomé en Príncipe ne vöärname broodsteade vöär med name karetteskildpädde (''Eretmochelys imbricata'').
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 [[Kategorie: Laand]]
