--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -110,6 +110,17 @@ Up seyhöygde is et klimaat tropisk: heyte en vuchtig med döärsneyde jårlikse
 
 === '''Soorten planten en deers''' ===
 Et land valt vöär en deyl under de ekoregio Nat laeglandwold van São Tomé, Príncipe en Annobón. In 2019 stünd et 68. up ne bebuskingslyste med 172 andere landen. De eilände hebbet weinig inheymske sougdeers (behalve den sãotomeesken spitsmuus en verskeidene inheymske vleadermüse). Wal leavet der flink wat inheymske vöägel en planten up de eilanden, sou as de sãotoméeske ibis, den kleinsten ård ibis van de wearld, de grötste honningsuger van de wearld, den seldsamen sãotoméesken klauwerd en verskeidene groute soorten ''Begonia''. Ouk is São Tomé en Príncipe ne vöärname broodsteade vöär med name karetteskildpädde (''Eretmochelys imbricata'').
+
+== Ekonomy ==
+
+=== Landbouw ===
+Seyd de 19. eywe drait de ekonomy van São Tomé en Príncipe op plantagelandbouw. Rund de unafhangelikheid was et bewarkbåre land vöär 90% in handen van portugeyske plantageholders. Nå de unafhangelikheid güng et beheyr van disse plantages oaver up ståtslandbouwbedryve. Med 95% van de heyle landbouwgrunden is kakao et höyvdgewas up São Tomé. Andere uutvoorgewassen sint under meyr kopra, palmkernen en koffee.
+
+Voodselmakerye vöär binnenlandsk gebruuk is neet genog vöär de bevolking, soudat et land et meyste van et eaten müt invoren. In 1997 wör eskatted dat sou'n 90% van alle eaten in et land invoord wör. De regeyring hevt med verskillende programma's probeerd voodselprodukty in de höygde to krygen. Geld hyrvöär kümt vöärnamelik uut et butenland.
+
+Nöäst landbouw müt et land et vöäral hebben van viskerye en kleinskålige industry. Dat lätste richt sik vöäral up et verwarken van lokale landbouwprodukte en et maken van en paar simpele konsumptygoderen. De eilanden sint mooi genog vöär turisme en de regeyring is gangs üm der måtregelen vöär te treffen üm et in de beyne te helpen. Souwat 11% van de lüde warket vöär de regeyring.
+
+Nå unafhangelikheid had et land ne centraal eleide ekonomy. Et grötste deyl van produkty was in handen van den ståt. Den oorsprungeliken grundwet skreav ne mengde ekonomy vöär, med private handelsunderneamingen dee warkden vanuut ståtsvastgood en fabriken.
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 [[Kategorie: Laand]]
