--- a/Afghanistan.mw
+++ b/Afghanistan.mw
@@ -1,6 +1,6 @@
 {{Laandtabel-twd
 | vlagge=Flag of Afghanistan (2013–2021).svg
-| woapn=National emblem of Afghanistan.svg
+| woapn=
 | naam=Afghanistan
 | naaminlaandssproak=<span style="line-height:1.33em;">جمهوری اسلامی افغانستان<br />''Jomhūrī-ye Eslāmī-ye Afġānistān''<br /><small>([[Dari (Persiez)|Perzies]])</small><br />د افغانستان اسلامي جمهوریت<br />''Da Afġānistān Islāmī Jomhoriyat''<br /><small>([[Pashto]])</small></span>
 | lokasie = Afghanistan_in_its_region.svg
