*Empty MediaWiki Message*

--- a/Ieslaand.mw
+++ b/Ieslaand.mw
@@ -1,7 +1,7 @@
 {{Laandtabel-stl
 | naemeinlaanstael = Lýðveldið Ísland
 | vlagge = [[Bestaand:Flag of Iceland.svg|140px|Vlagge van Ieslaand]]
-| waopen = [[Bestaand:Coat of Arms of Iceland 2.PNG|100px|Waopen van Ieslaand]]
+| waopen = [[Bestaand:Coat of arms of Iceland.svg|100px|Waopen van Ieslaand]]
 | lekaosie = Europe location ISL.png
 | breedtegroad= 65///N | lengtegroad= 19///W | region= IS
 | taelen = [[Ieslaans]]
