--- a/Westerveld.mw
+++ b/Westerveld.mw
@@ -39,7 +39,7 @@ De gemiente Westerveld hef 26 officiële kernen. Hiervan bint de veurmaolige gem
 |-
 |[[Wapservene]] ||ALIGN="right"| 760 || [[Eemster]] || ALIGN="right"| 140 || [[Wateren (Westerveld)|Wateren]] || ALIGN="right"| ?
 |-
-| [[Darp]] || ALIGN="right"| 550 || [[Leggeloo]] || ALIGN="right"| 120 || ''[[Westeinde (Westerveld)|Westeinde]]'' ''*'' || ALIGN="right"| 150 
+| [[Darp (Westerveld)|Darp]] || ALIGN="right"| 550 || [[Leggeloo]] || ALIGN="right"| 120 || ''[[Westeinde (Westerveld)|Westeinde]]'' ''*'' || ALIGN="right"| 150 
 |-
 | [[Neiensleek]] || ALIGN="right"| 400 || [[Wittelte]] || ALIGN="right"| 120 ||''[[Veldhuzen (Drenthe)|Veldhuzen]]'' ''*'' || ALIGN="right"| ?
 |-
