*Empty MediaWiki Message*

--- a/Darp_(Westerveld).mw
+++ b/Darp_(Westerveld).mw
@@ -1,1 +1,3 @@
-Darp is 'n dörp in die gemiente [[Westerveld]]. Die dörp hat ungeviere twiehoonderd dörpelinge.
+{{wiu}}
+
+Darp is 'n dörp in die gemiente [[Westerveld]]. Die dörp hat ungeviere viefhoonderd dörpelinge.
