--- a/Darp_(Westerveld).mw
+++ b/Darp_(Westerveld).mw
@@ -1,3 +1,20 @@
 {{wiu}}
+{{Infobox plaots in Nederland
+| naam = Darp
+| pervinsie = {{NL-vlag|Drenthe}}
+| gemiente = {{NL-vlag|Westerveld}}
+| lat_deg = 52
+| lat_min = 46
+| lat_sec = 30
+| lon_deg = 6
+| lon_min = 12
+| lon_sec = 13
+| detailkaort = Map NL - Westerveld - Darp.png
+| detailkaortbieskrift = Lokatie in d' gemiente Westerveld
+| wapen = 
+| oppervlakte = 
+| postcode = 
+| woonplaatscode = 3106
+}}
 
 Darp is 'n dörp in die gemiente [[Westerveld]]. Die dörp hat ungeviere viefhoonderd dörpelinge.
