*Empty MediaWiki Message*

--- a/Darp_(Westerveld).mw
+++ b/Darp_(Westerveld).mw
@@ -1,20 +1,24 @@
 {{wiu}}
-{{Infobox plaots in Nederland
+{{Ploats in Nederlaand
 | naam = Darp
-| pervinsie = {{NL-vlag|Drenthe}}
-| gemiente = {{NL-vlag|Westerveld}}
-| lat_deg = 52
-| lat_min = 46
-| lat_sec = 30
-| lon_deg = 6
-| lon_min = 12
-| lon_sec = 13
-| detailkaort = Map NL - Westerveld - Darp.png
-| detailkaortbieskrift = Lokatie in d' gemiente Westerveld
-| waop'n = 
-| öppervlaok = 
-| postkode = 
-| weunplaotscode = 3106
+| soorte =
+| bestansnaam vlagge =
+| bestansnaam wapen =
+| lokasie-svg = {{Map NL - Westerveld.png|Lokatie in d' gemiente Westerveld}}
+| breedtegroad = 52 46 30
+| lengtegroad = 6 12 13
+| gemeente = {{NL-vlag|Westerveld}}
+| region = {{NL-vlag|Drenthe}}
+| oppervlak =
+|  oppervlak laand =
+|  oppervlak water =
+| inwoners = 550
+|  doatum inwoners =
+|  dichtheid =
+| verkeersoader =
+| netnummer =
+| postcode =
+| webstee =
 }}
 
 Darp is 'n dörp in die gemiente [[Westerveld]]. Die dörp hat ungeviere viefhoonderd dörpelinge.
