*Empty MediaWiki Message*

--- a/Darp_(Westerveld).mw
+++ b/Darp_(Westerveld).mw
@@ -5,8 +5,8 @@
 | bestansnaam vlagge =
 | bestansnaam wapen =
 | lokasie-svg = {{Map NL - Westerveld.png|Lokatie in d' gemiente Westerveld}}
-| breedtegroad = 52 46 30
-| lengtegroad = 6 12 13
+| breedtegroad = 52.775
+| lengtegroad = 6.2036111
 | gemeente = {{NL-vlag|Westerveld}}
 | region = {{NL-vlag|Drenthe}}
 | oppervlak =
