*Empty MediaWiki Message*

--- a/Darp_(Westerveld).mw
+++ b/Darp_(Westerveld).mw
@@ -8,7 +8,7 @@
 | breedtegroad = 52.775
 | lengtegroad = 6.2036111
 | gemeente = {{NL-vlag|Westerveld}}
-| region = {{NL-vlag|Drenthe}}
+| region = {{DR-vlag|Drenthe}}
 | oppervlak =
 |  oppervlak laand =
 |  oppervlak water =
