*Empty MediaWiki Message*

--- a/Freriksoord.mw
+++ b/Freriksoord.mw
@@ -1,5 +1,25 @@
 {{wiu}}
-
+{{Ploats in Nederlaand
+| naam = Freriksoord (Frederiksoord)
+| soorte =
+| bestansnaam vlagge =
+| bestansnaam wapen =
+| lokasie-svg = {{Map NL - Westerveld.png|Lokatie in d' gemiente Westerveld}}
+| breedtegroad = 52.775
+| lengtegroad = 6.2036111
+| gemeente = {{NL-vlag|Westerveld}}
+| region = {{DR-vlag|Drenthe}}
+| oppervlak =
+|  oppervlak laand =
+|  oppervlak water =
+| inwoners = 350
+|  doatum inwoners =
+|  dichtheid =
+| verkeersoader =
+| netnummer =
+| postcode =
+| webstee =
+}}
 '''Freriksoord''' (ook wel '''Frereksoard''', vaok afgekort naor '''F'oord'''; [[Nederlaands]] en Koloniaols: Frederiksoord) is een dörp in de gemiente [[Westerveld]], in 't zuudwesten van de pervincie [[Drenthe]]. 'T ligt ten zuudwesten vaon [[Vledder]] en heeft ongevier huunderd inwoners. Tot 1998 beheurde 't dörp tot de gemiente Vledder. In het zuidwesten ligt het dörp Neiensleek geleen. Seins 2021 staot Freriksoord op de Unesco-Werelderfgoedlijst als een vaon de [[Koloniën vaon Weldaodigheid]].
 
 [[Kategorie:Plaots in Drenthe]]
