/* Soorten planten en deers */

--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -121,6 +121,18 @@ Nöäst landbouw müt et land et vöäral hebben van viskerye en kleinskålige i
 
 Nå unafhangelikheid had et land ne centraal eleide ekonomy. Et grötste deyl van produkty was in handen van den ståt. Den oorsprungeliken grundwet skreav ne mengde ekonomy vöär, med private handelsunderneamingen dee warkden vanuut ståtsvastgood en fabriken.
 
+=== Regeyringsstüür ===
+tüsken 1980 en 2000 had de sãotomeeske ekonomy et suur. Ekonomisken groi stünd stille en kakao-uutvoor wör in minder in volume en waerde wårmed groute skulden untstünden. Plantageland wör in beslag nöämen, wårmed de heyle kakaoprodukty instörtden. Tegelyke sakkeden ouk den prys van kakao in.
+
+Üm dat ümme to draien, greyp de regeyring flink in med ekonomiske herförmingen. In 1987 voorden de regeyring ne strukturele anpassing når et Internationaal Monetäär Funds in en löät underneamers meyr doon med vöärmålig ståtsbedryve in landbouw, kommercy, et bankweasen en turisme. Den nådruk ligt groutendeyls up privatisaty seyd de jåren '90, vöäral van landbouw en industry.
+
+De sãotomeeske regeyring krigt vöäle geld van et VN Untwikkelingsprogramma, de Wearldbanke, den Europeesken Uny, Portugal, Taiwan en de Afrikaanske Untwikkelignsbanke. April 2000 warkeden de Centrale Banke van São Tomé en Príncipe samen med et IMF an en armodebestrydingsplan en den anjacht van groi. Dool was de inflaty weaderümme brengen töt 3% in 2001, nen ekonomisken groi van 4% krygen en belastingskulden aflössen.
+
+An et ende van 2000 küm São Tomé in anmarking vöär ne vöärname kwytskelding under et Arme Landen med Swåre Skulden-initiatyv van de IMF en de Wearldbanke. Dat plan küm under druk to stån döär den ståtsgreyp van 2003 en dårbykummende nouduutgaven. Nå den wåpenstilstand stüürden et IMF ne afvaerdiging når São Tomé üm to kyken wo as et land der ekonomisk vöär stünd. Disse evaluaty löpt noch en wacht up regeyringsbesluut oaver de verdeyling van öälyupbrengsten. Wee as dårvan de centen krigt is noch weinig düdelikheid oaver. Et kan et land anders flink vöäruut helpen.
+
+Tegelyke wördt up kleine skåle underneamingen in den turistisken hook anejagd. 
+
+Portugal blivt eyne van São Tomé's grötste handelspartners, med name vöär invoor. Eaten, maakgoderen, machines en vervoorsmiddelen kummet vöärnamelik uut de EU.
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 [[Kategorie: Laand]]
