--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -30,7 +30,7 @@
 
 Vöär at [[Portugal|portugeyske]] verkenners et untdekkeden in den 14. eywe, woanden der gin lüde. Stükken by beaten wörden se koloniseerd en bewoand durende de 16. eywe. Händigan wörden de eilanden ne vöärname handelspost vöär de atlantiske [[slavenhandel]]. Ümdat São Tomé en Príncipe kort by den eavenaar ligget en ryken vulkanisken grund hebbet, wolde sukerreed der best groien. Neet vöäle later kümmen dår ouk noch andere waerdevulle gewassen by as [[Koffie|koffee]] en [[Kakouboom|kakao]]. Der wörden dikke verdeend an de [[Plantage|plantages]], dee bewarked wörden döär afrikaanske slaven. Gedurende de 19. en 20. eywen kümmen de lüde üm de souvöäle tyd up de achterste beyne teagen de underdrukking, wårdöär de handel eraked wör. Et leidden in 1975 töt vreydsame unafhangelikheid. Seyd dee tyd is São Tomé en Princípe eyne van Afrika's eavenwichtigste en meyst demokratiske landen.
 
-De lüde van São Tomé en Princípe sint höyvdsakelik afrikaansk of [[mestise]]n. Dee küret meyst portugeysk of [[forrokreool]]. Ouk kaapverdisk, angoleesk en príncipeesk kreol kummet vöär De meysten sint [[Rooms-Katholieke Karke|roumsk]]. Et stempel van de portugeyske oaverheyrsking is noch altyd te verneamen in de kultuur, språke, gebruken en de musik, wårin as europeeske en afrikaanske mengförme te vinden sint. São Tomé en Príncipe is eyne van de grundleggers van de [[Gemeynskap van Portugeysk-spreakende landen]].
+De lüde van São Tomé en Princípe sint höyvdsakelik afrikaansk of [[mestise]]n. Dee küret meyst portugeysk of [[forrokreool]]. Ouk kaapverdisk, angoleesk en príncipeesk kreol kummet vöär De meysten sint [[Rooms-Katholieke Karke|roumsk]]. Et stempel van de portugeyske oaverheyrsking is noch altyd to verneamen in de kultuur, språke, gebruken en de musik, wårin as europeeske en afrikaanske mengförme to vinden sint. São Tomé en Príncipe is eyne van de grundleggers van de [[Gemeynskap van Portugeysk-spreakende landen]].
 
 De populäärste sport is [[vootbal]]. Koaken doot se vake med heyte krüden en ouk koffee wördt mangs döär et eaten dån. Et land steyt in de portugeyske wearld bekend üm de ryke [[literatuur|literäre]] tradity.
 
@@ -117,7 +117,7 @@ Seyd de 19. eywe drait de ekonomy van São Tomé en Príncipe op plantagelandbou
 
 Voodselmakerye vöär binnenlandsk gebruuk is neet genog vöär de bevolking, soudat et land et meyste van et eaten müt invoren. In 1997 wör eskatted dat sou'n 90% van alle eaten in et land invoord wör. De regeyring hevt med verskillende programma's probeerd voodselprodukty in de höygde to krygen. Geld hyrvöär kümt vöärnamelik uut et butenland.
 
-Nöäst landbouw müt et land et vöäral hebben van viskerye en kleinskålige industry. Dat lätste richt sik vöäral up et verwarken van lokale landbouwprodukte en et maken van en paar simpele konsumptygoderen. De eilanden sint mooi genog vöär turisme en de regeyring is gangs üm der måtregelen vöär te treffen üm et in de beyne te helpen. Souwat 11% van de lüde warket vöär de regeyring.
+Nöäst landbouw müt et land et vöäral hebben van viskerye en kleinskålige industry. Dat lätste richt sik vöäral up et verwarken van lokale landbouwprodukte en et maken van en paar simpele konsumptygoderen. De eilanden sint mooi genog vöär turisme en de regeyring is gangs üm der måtregelen vöär to treffen üm et in de beyne to helpen. Souwat 11% van de lüde warket vöär de regeyring.
 
 Nå unafhangelikheid had et land ne centraal eleide ekonomy. Et grötste deyl van produkty was in handen van den ståt. Den oorsprungeliken grundwet skreav ne mengde ekonomy vöär, med private handelsunderneamingen dee warkden vanuut ståtsvastgood en fabriken.
 
