/* Kop van Overiessel, Sallaand mit 't Vechtdal, Veluwe */ Reusken

--- a/Nedersaksische_achternamen.mw
+++ b/Nedersaksische_achternamen.mw
@@ -412,6 +412,8 @@ Femilienoamen mit n Grunnegse of Oostfraise heerkomst worden onder aander kenmaa
 |-
 |Rekers|| de jonge van Reker
 |-
+|Reusken|| viej veural op de oostelijke Veluwe
+|-
 |Ridderikhof(f), Ridderinkhoff|| adresname (in en rond [[Asselt]])
 |-
 |Rigterink Willink|| adresname
