https://huusvandetaol.nl/product/tammo-tiesing-en-het-liek-op-zolder-jan-veenstra/

--- a/Jan_Veenstra.mw
+++ b/Jan_Veenstra.mw
@@ -11,7 +11,7 @@ Op 't muzikale vlak hef e trompet espeuld in 't meziekcorps van Noordscheschut e
 ==Schrieveri'je==
 *''[[Zangeres van zulver]]'' (novelle, Zuudwolde, 1989)
 *''Die nacht een feest en andere verhalen'' (Zuudwolde, 1998)
-*''Tammo Tiessing en het liek op zolder'' (speurdersroman, Zuudwolde, 2004)
+*''Tammo Tiesing en het liek op zolder'' (speurdersroman, Zuudwolde, 2004)
 *''De zomer van '59'' (Grunning, 2007, Nederlaandstalig)
 *''Dörpsstraot, oes dörp'' (2009, boekenweekkedo veur de Drèentse Boekenweke, mit [[Ton Peters]])
 *''Here weg'' (roman, Passage, 2012)
