--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -133,6 +133,19 @@ An et ende van 2000 küm São Tomé in anmarking vöär ne vöärname kwytskeldi
 Tegelyke wördt up kleine skåle underneamingen in den turistisken hook anejagd. 
 
 Portugal blivt eyne van São Tomé's grötste handelspartners, med name vöär invoor. Eaten, maakgoderen, machines en vervoorsmiddelen kummet vöärnamelik uut de EU.
+
+=== Ekonomiske uutdagingen ===
+De lätste jåren groit de ekonomy van São Tomé en Príncipe döär (butenlandske) investeringen in landbouw en turisme. Mär den grötsten anjager was de regeyring dee butenlandsk eleynd geld uutgavven. Et bruto binnenlandsk produkt (BBP) groiden in döärsneyde med 5,5% tüsken 2009 en 2017, mär is wat aferemd seyd 2014. De groiremming in de ekonomy küm döärdat laegere regeyringsorganen minder uutgavven döär laegere butenlandske leyningen en afenöämene umsätbelasting.
+
+De grötste uutdagingen vöär de ekonomy sint ne kleine warkmacht, et feit dat et land nen koppel eilanden is, ne kleine binnenlandske markt, klimaatskummelingen, upwårming van de aerde, skaarse diplomatiske kennis en årmode.
+
+De regeyring wil et up den langen duur uplössen döär verskillende sektoren to stimuleren, de ekonomy to vorbreyden, regeyringsuutgaven in to dammen, volk an et underneamen to krygen en butenlandske investeringen an to trekken.
+
+=== '''Dinge dee al good gåt''' ===
+In döärsneyde düt São Tomé en Príncipe et better as andere afrikaanske landen under den Sahara up de Untwikkelingsindeks. Et land hevt flink vöäruut ebuurd up de meyste sociale vlakken. Alle kinder van de eilanden gåt når skole en den döärsneyde leavensverwachting is inmiddels 70 jår. Kinderstarvde kümt håste neet meyr vöär en de meyste lüde hebbet ströymend water en elektriciteit.
+
+Wat underneamerskap angeyt hevt de regeyring verskillende wetten anenöämen wårmed private underneamingen estart künden worden en dee butenlandske investeringen antrekkelik maket. Tüsken 2015 en 2019 sint der heyl wat nye bedryve sticht. Dårmed daalden de warklousheid, steyg den uutvoor en untstunden verskillende fabriken. Oaver de kummende jåren wördt nen flinken ekonomisken groi verwachted.
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 [[Kategorie: Laand]]
