--- a/Griekse_alfabet.mw
+++ b/Griekse_alfabet.mw
@@ -74,7 +74,7 @@ De [[Grieks|Griekse toal]] wordt schreven ien t '''Griekse alfabet'''. Dit [[alf
 |λ
 |l
 |l
-|Lambda
+|labda
 |-
 |Μ
 |μ
@@ -159,7 +159,7 @@ As der op t ìnd van n woord n sigma (σ) te stoan komt, schrift man de sigma as
 
 Veurbeeld:
 
-*δουλο'''ς''' (doulos, slaaf) 
+*δουλο'''ς''' (roekoe slaaf)
 *'''σ'''ωμα (sooma, lichaam)
 
 == Nait klassiek ==
