--- a/Griekse_alfabet.mw
+++ b/Griekse_alfabet.mw
@@ -159,7 +159,7 @@ As der op t ìnd van n woord n sigma (σ) te stoan komt, schrift man de sigma as
 
 Veurbeeld:
 
-*δουλο'''ς''' (roekoe slaaf)
+*δουλο'''ς''' (ROKOEEEEEE, slaaf)
 *'''σ'''ωμα (sooma, lichaam)
 
 == Nait klassiek ==
