Wysigingen döär [[Special:Contributions/157.97.216.2|157.97.216.2]] ([[User talk:157.97.216.2|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:84.199.77.123|84.199.77.123]]

--- a/Griekse_alfabet.mw
+++ b/Griekse_alfabet.mw
@@ -74,7 +74,7 @@ De [[Grieks|Griekse toal]] wordt schreven ien t '''Griekse alfabet'''. Dit [[alf
 |λ
 |l
 |l
-|labda
+|Lambda
 |-
 |Μ
 |μ
@@ -159,7 +159,7 @@ As der op t ìnd van n woord n sigma (σ) te stoan komt, schrift man de sigma as
 
 Veurbeeld:
 
-*δουλο'''ς''' (ROKOEEEEEE, slaaf)
+*δουλο'''ς''' (doulos, slaaf) 
 *'''σ'''ωμα (sooma, lichaam)
 
 == Nait klassiek ==
