--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -141,11 +141,13 @@ De grötste uutdagingen vöär de ekonomy sint ne kleine warkmacht, et feit dat 
 
 De regeyring wil et up den langen duur uplössen döär verskillende sektoren to stimuleren, de ekonomy to vorbreyden, regeyringsuutgaven in to dammen, volk an et underneamen to krygen en butenlandske investeringen an to trekken.
 
-=== '''Dinge dee al good gåt''' ===
+=== Dinge dee al good gåt ===
 In döärsneyde düt São Tomé en Príncipe et better as andere afrikaanske landen under den Sahara up de Untwikkelingsindeks. Et land hevt flink vöäruut ebuurd up de meyste sociale vlakken. Alle kinder van de eilanden gåt når skole en den döärsneyde leavensverwachting is inmiddels 70 jår. Kinderstarvde kümt håste neet meyr vöär en de meyste lüde hebbet ströymend water en elektriciteit.
 
 Wat underneamerskap angeyt hevt de regeyring verskillende wetten anenöämen wårmed private underneamingen estart künden worden en dee butenlandske investeringen antrekkelik maket. Tüsken 2015 en 2019 sint der heyl wat nye bedryve sticht. Dårmed daalden de warklousheid, steyg den uutvoor en untstunden verskillende fabriken. Oaver de kummende jåren wördt nen flinken ekonomisken groi verwachted.
 
+=== Öäly ===
+In 2001 wörden São Tomé un Nigeria et eyns oaver samen kyken of der öäly in de deylde seyboadem sit. Nå lange oaverleggen güng et samenwarkingsgebeed in april 2003 lös vöär bedingen van internationale öälyfirma's. et gebeed wör in neagen blükke indeyld; bluk eyne güng når ChevronTexaco, ExxonMobil, en et noorske Equity Energy. São Tomé kreag 40% van et bud van $123 miljoon en Nigeria de andere 60%. Oktober 2004 stünden andere blükke noch lös. São Tomé hevt meyr as $2 miljoon van de banke kreagen üm de petröälysektor in de beyne to helpen.
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 [[Kategorie: Laand]]
