png is nait svg

--- a/Sevenem.mw
+++ b/Sevenem.mw
@@ -3,7 +3,7 @@
 | soorte = stad 
 | bestansnaam vlagge = Sevenum vlag.svg
 | bestansnaam wapen = Sevenum wapen.svg
-| lokasie-svg = LocatieSevenum.png
+| lokasie = LocatieSevenum
 | breedtegroad = 51/25/0/N |
 | lengtegroad = 6/2/0/E |
 | gemeente = [[Horst an de Maas]]
