[[Mal:Ploats in Nederlaand]]

--- a/Freriksoord.mw
+++ b/Freriksoord.mw
@@ -4,11 +4,11 @@
 | soorte =
 | bestansnaam vlagge =
 | bestansnaam wapen =
-| lokasie-svg = {{Map NL - Westerveld.png|Lokatie in d' gemiente Westerveld}}
+| lokasie-svg = 
 | breedtegroad = 52.775
 | lengtegroad = 6.2036111
 | gemeente = {{NL-vlag|Westerveld}}
-| region = {{DR-vlag|Drenthe}}
+| region = NL-DR
 | oppervlak =
 |  oppervlak laand =
 |  oppervlak water =
