--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -124,30 +124,30 @@ Nå unafhangelikheid had et land ne centraal eleide ekonomy. Et grötste deyl va
 === Regeyringsstüür ===
 tüsken 1980 un 2000 had de sãotomeeske ekonomy et suur. Ekonomisken groi stünd stille un kakao-uutvoor wör in minder in volume un waerde wårmed groute skulden untstünden. Plantageland wör in beslag nöämen, wårmed de heyle kakaoprodukty instörtden. Tegelyke sakkeden ouk den prys van kakao in.
 
-Üm dat ümme to draien, greyp de regeyring flink in med ekonomiske herförmingen. In 1987 voorden de regeyring ne strukturele anpassing når et Internationaal Monetäär Funds in un löät underneamers meyr doon med vöärmålig ståtsbedryve in landbouw, kommercy, et bankweasen un turisme. Den nådruk ligt groutendeyls up privatisaty seyd de jåren '90, vöäral van landbouw un industry.
+Üm dat ümme to draien, greyp de regeyring flink in med ekonomiske herförmingen. In 1987 voorden de regeyring ne strukturele anpassing når et [[Internationaal Monetäär Funds]] in un löät underneamers meyr doon med vöärmålig ståtsbedryve in landbouw, kommercy, et bankweasen un turisme. Den nådruk ligt groutendeyls up [[privatisaty]] seyd de jåren '90, vöäral van landbouw un industry.
 
-De sãotomeeske regeyring krigt vöäle geld van et VN Untwikkelingsprogramma, de Wearldbanke, den Europeesken Uny, Portugal, Taiwan un de Afrikaanske Untwikkelingsbanke. April 2000 warkeden de Centrale Banke van São Tomé en Príncipe samen med et IMF an en armodebestrydingsplan un den anjacht van groi. Dool was de inflaty weaderümme brengen töt 3% in 2001, nen ekonomisken groi van 4% krygen un belastingskulden aflössen.
+De sãotomeeske regeyring krigt vöäle geld van et [[VN Untwikkelingsprogramma]], de [[Wearldbanke]], den [[Europeeske Uny|Europeesken Uny]], Portugal, [[Taiwan]] un de [[Afrikaanske Untwikkelingsbanke]]. April 2000 warkeden de Centrale Banke van São Tomé en Príncipe samen med et IMF an en armodebestrydingsplan un den anjacht van groi. Dool was de [[inflaty]] weaderümme brengen töt 3% in 2001, nen ekonomisken groi van 4% krygen un belastingskulden aflössen.
 
-An et ende van 2000 küm São Tomé in anmarking vöär ne vöärname kwytskelding under et Arme Landen med Swåre Skulden-initiatyv van de IMF un de Wearldbanke. Dat plan küm under druk to stån döär den ståtsgreyp van 2003 un dårbykummende nouduutgaven. Nå den wåpenstilstand stüürden et IMF ne afvaerdiging når São Tomé üm to kyken wo as et land der ekonomisk vöär stünd. Disse evaluaty löpt noch un wacht up regeyringsbesluut oaver de verdeyling van öälyupbrengsten. Wee as dårvan de centen krigt is noch weinig düdelikheid oaver. Et kan et land anders flink vöäruut helpen.
+An et ende van 2000 küm São Tomé in anmarking vöär ne vöärname kwytskelding under et [[Arme Landen med Swåre Skulden]]-initiatyv van de IMF un de Wearldbanke. Dat plan küm under druk to stån döär den ståtsgreyp van 2003 un dårbykummende nouduutgaven. Nå den wåpenstilstand stüürden et IMF ne afvaerdiging når São Tomé üm to kyken wo as et land der ekonomisk vöär stünd. Disse evaluaty löpt noch un wacht up regeyringsbesluut oaver de verdeyling van öälyupbrengsten. Wee as dårvan de centen krigt is noch weinig düdelikheid oaver. Et kan et land anders flink vöäruut helpen.
 
 Tegelyke wördt up kleine skåle underneamingen in den turistisken hook anejagd. 
 
 Portugal blivt eyne van São Tomé's grötste handelspartners, med name vöär invoor. Eaten, maakgoderen, machines un vervoorsmiddelen kummet vöärnamelik uut de EU.
 
 === Ekonomiske uutdagingen ===
-De lätste jåren groit de ekonomy van São Tomé un Príncipe döär (butenlandske) investeringen in landbouw en turisme. Mär den grötsten anjager was de regeyring dee butenlandsk eleynd geld uutgavven. Et bruto binnenlandsk produkt (BBP) groiden in döärsneyde med 5,5% tüsken 2009 un 2017, mär is wat aferemd seyd 2014. De groiremming in de ekonomy küm döärdat laegere regeyringsorganen minder uutgavven döär laegere butenlandske leyningen un afenöämene umsätbelasting.
+De lätste jåren groit de ekonomy van São Tomé un Príncipe döär (butenlandske) investeringen in landbouw en turisme. Mär den grötsten anjager was de regeyring dee butenlandsk eleynd geld uutgavven. Et [[bruto binnenlandsk produkt]] (BBP) groiden in döärsneyde med 5,5% tüsken 2009 un 2017, mär is wat aferemd seyd 2014. De groiremming in de ekonomy küm döärdat laegere regeyringsorganen minder uutgavven döär laegere butenlandske leyningen un afenöämene umsätbelasting.
 
 De grötste uutdagingen vöär de ekonomy sint ne kleine warkmacht, et feit dat et land nen koppel eilanden is, ne kleine binnenlandske markt, klimaatskummelingen, upwårming van de aerde, skaarse diplomatiske kennis un årmode.
 
 De regeyring wil et up den langen duur uplössen döär verskillende sektoren to stimuleren, de ekonomy to vorbreyden, regeyringsuutgaven in to dammen, volk an et underneamen to krygen un butenlandske investeringen an to trekken.
 
 === Dinge dee al good gåt ===
-In döärsneyde düt São Tomé en Príncipe et better as andere afrikaanske landen under den Sahara up de Untwikkelingsindeks. Et land hevt flink vöäruut ebuurd up de meyste sociale vlakken. Alle kinder van de eilanden gåt når skole un den döärsneyde leavensverwachting is inmiddels 70 jår. Kinderstarvde kümt håste neet meyr vöär un de meyste lüde hebbet ströymend water un elektriciteit.
+In döärsneyde düt São Tomé en Príncipe et better as andere afrikaanske landen under den Sahara up de [[Untwikkelingsindeks]]. Et land hevt flink vöäruut ebuurd up de meyste sociale vlakken. Alle kinder van de eilanden gåt når skole un den döärsneyde [[leavensverwachting]] is inmiddels 70 jår. [[Kinderstarvde]] kümt håste neet meyr vöär un de meyste lüde hebbet ströymend water un elektriciteit.
 
 Wat underneamerskap angeyt hevt de regeyring verskillende wetten anenöämen wårmed private underneamingen estart künden worden un dee butenlandske investeringen antrekkelik maket. Tüsken 2015 un 2019 sint der heyl wat nye bedryve sticht. Dårmed daalden de warklousheid, steyg den uutvoor un untstunden verskillende fabriken. Oaver de kummende jåren wördt nen flinken ekonomisken groi verwachted.
 
 === Öäly ===
-In 2001 wörden São Tomé un Nigeria et eyns oaver samen kyken of der öäly in de deylde seyboadem sit. Nå lange oaverleggen güng et samenwarkingsgebeed in april 2003 lös vöär bedingen van internationale öälyfirma's. Et gebeed wör in neagen blükke indeyld; bluk eyne güng når ChevronTexaco, ExxonMobil, un et noorske Equity Energy. São Tomé kreag 40% van et bud van $123 miljoon un Nigeria de andere 60%. Oktober 2004 stünden andere blükke noch lös. São Tomé hevt meyr as $2 miljoon van de banke kreagen üm de petröälysektor in de beyne to helpen.
+In 2001 wörden São Tomé un [[Nigeria]] et eyns oaver samen kyken of der öäly in de deylde seyboadem sit. Nå lange oaverleggen güng et samenwarkingsgebeed in april 2003 lös vöär bedingen van internationale öälyfirma's. Et gebeed wör in neagen blükke indeyld; bluk eyne güng når [[ChevronTexaco]], [[ExxonMobil]], un et noorske [[Equity Energy]]. São Tomé kreag 40% van et bud van $123 miljoon un Nigeria de andere 60%. Oktober 2004 stünden andere blükke noch lös. São Tomé hevt meyr as $2 miljoon van de banke kreagen üm de petröälysektor in de beyne to helpen.
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 [[Kategorie: Laand]]
